--- a/requirements.txt
+++ b/requirements.txt
@@ -39,7 +39,7 @@ referencing==0.33.0
 requests==2.31.0
 rich==13.7.0
 rpds-py==0.18.0
-selenium==4.16.0
+selenium==4.18.1
 six==1.16.0
 smmap==5.0.1
 sniffio==1.3.0
@@ -50,12 +50,13 @@ tenacity==8.2.3
 toml==0.10.2
 toolz==0.12.1
 tornado==6.4
+tqdm==4.66.2
 trio==0.24.0
 trio-websocket==0.11.1
 typing_extensions==4.10.0
 tzdata==2024.1
 tzlocal==5.2
-undetected-chromedriver==3.5.4
+undetected-chromedriver==3.5.5
 urllib3==2.2.1
 validators==0.22.0
 watchdog==4.0.0
