--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 altair==5.2.0
 attrs==23.2.0
+beautifulsoup4==4.12.3
 blinker==1.7.0
 cachetools==5.3.2
 certifi==2024.2.2
@@ -39,11 +40,12 @@ referencing==0.33.0
 requests==2.31.0
 rich==13.7.0
 rpds-py==0.18.0
-selenium==4.18.1
+selenium==4.16.0
 six==1.16.0
 smmap==5.0.1
 sniffio==1.3.0
 sortedcontainers==2.4.0
+soupsieve==2.5
 streamlit==1.31.1
 streamlit-antd-components==0.3.2
 tenacity==8.2.3
@@ -62,5 +64,6 @@ validators==0.22.0
 watchdog==4.0.0
 webdriver-manager==4.0.1
 websockets==12.0
+wget==3.2
 wsproto==1.2.0
 zipp==3.17.0
