--- a/requirements.txt
+++ b/requirements.txt
@@ -85,7 +85,7 @@ trio-websocket==0.11.1
 typing_extensions==4.10.0
 tzdata==2024.1
 tzlocal==5.2
-undetected-chromedriver
+undetected-chromedriver==3.5.5
 urllib3==2.2.1
 validators==0.22.0
 watchdog==4.0.0
