--- a/requirements.txt
+++ b/requirements.txt
@@ -1,97 +1,94 @@
-altair==5.2.0
-attrs==23.2.0
-beautifulsoup4==4.12.3
-behave==1.2.6
-blinker==1.7.0
-cachetools==5.3.2
-certifi==2024.2.2
-cffi==1.16.0
-chardet==5.2.0
-charset-normalizer==3.3.2
-click==8.1.7
-colorama==0.4.6
-cssselect==1.2.0
-et-xmlfile==1.1.0
-exceptiongroup==1.2.0
-execnet==2.0.2
-fasteners==0.19
-filelock==3.13.1
-gitdb==4.0.11
-GitPython==3.1.42
-h11==0.14.0
-idna==3.6
-importlib-metadata==6.11.0
-iniconfig==2.0.0
-Jinja2==3.1.3
-jsonschema==4.21.1
-jsonschema-specifications==2023.12.1
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-mdurl==0.1.2
-numpy==1.26.4
-openpyxl==3.1.2
-outcome==1.3.0.post0
-packaging==23.2
-pandas==2.2.1
-parameterized==0.9.0
-parse==1.20.1
-parse-type==0.6.2
-pdbp==1.5.0
-pillow==10.2.0
-platformdirs==4.2.0
-pluggy==1.4.0
-protobuf==4.25.3
-py==1.11.0
-pyarrow==15.0.0
-pycparser==2.21
-pydeck==0.8.1b0
-Pygments==2.17.2
-pynose==1.5.0
-pyotp==2.9.0
-pyreadline3==3.4.1
-PySocks==1.7.1
-pytest==8.0.2
-pytest-html==2.0.1
-pytest-metadata==3.1.1
-pytest-ordering==0.6
-pytest-rerunfailures==13.0
-pytest-xdist==3.5.0
-python-dateutil==2.8.2
-python-dotenv==1.0.1
-pytz==2024.1
-PyYAML==6.0.1
-referencing==0.33.0
-requests==2.31.0
-rich==13.7.1
-rpds-py==0.18.0
-sbvirtualdisplay==1.3.0
-selenium==4.18.1
-seleniumbase==4.24.3
-six==1.16.0
-smmap==5.0.1
-sniffio==1.3.1
-sortedcontainers==2.4.0
-soupsieve==2.5
-streamlit==1.31.1
-streamlit-antd-components==0.3.2
-tabcompleter==1.3.0
-tenacity==8.2.3
-toml==0.10.2
-tomli==2.0.1
-toolz==0.12.1
-tornado==6.4
-tqdm==4.66.2
-trio==0.24.0
-trio-websocket==0.11.1
-typing_extensions==4.10.0
-tzdata==2024.1
-tzlocal==5.2
-undetected-chromedriver==3.5.5
-urllib3==2.2.1
-validators==0.22.0
-watchdog==4.0.0
-webdriver-manager==4.0.1
-websockets==12.0
-wget==3.2
-wsproto==1.2.0
-zipp==3.17.0
+altair
+attrs
+beautifulsoup4
+behave
+blinker
+cachetools
+certifi
+cffi
+chardet
+charset-normalizer
+click
+colorama
+cssselect
+et-xmlfile
+exceptiongroup
+execnet
+fasteners
+filelock
+gitdb
+GitPython
+h11
+idna
+importlib-metadata
+iniconfig
+Jinja2
+jsonschema
+jsonschema-specifications
+markdown-it-py
+MarkupSafe
+mdurl
+numpy
+openpyxl
+outcome
+packaging
+pandas
+parameterized
+parse
+parse-type
+pdbp
+pillow
+platformdirs
+pluggy
+protobuf
+py
+pyarrow
+pycparser
+pydeck
+Pygments
+pynose
+pyotp
+pyreadline3
+PySocks
+pytest
+pytest-html
+pytest-metadata
+pytest-ordering
+pytest-rerunfailures
+pytest-xdist
+python-dateutil
+python-dotenv
+pytz
+PyYAML
+referencing
+requests
+rich
+rpds-py
+sbvirtualdisplay
+selenium
+seleniumbase
+six
+smmap
+sniffio
+sortedcontainers
+soupsieve
+streamlit
+streamlit-antd-components
+tabcompleter
+tenacity
+toml
+tomli
+toolz
+tornado
+tqdm
+trio
+trio-websocket
+typing_extensions
+tzdata
+tzlocal
+undetected-chromedriver
+webdriver-manager
+websockets
+wget
+wsproto
+zipp
